services/routing-demo/demo-g/account_domain_service_deploy_0.1.2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: account-domain-service
    role: internal
    version: 0.1.2
  name: account-domain-service-0.1.2
  namespace: multi-tenant-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-domain-service
      role: internal
      version: 0.1.2
  template:
    metadata:
      labels:
        app: account-domain-service
        role: internal
        version: 0.1.2
    spec:
      containers:
      - env:
        - name: IDENTITY_DOMAIN_SERVICE_LOCATION
          value: http://identity-domain-service:8080/
        image: wcschlosser/account-domain-service:0.1.2
        name: account-domain-service
